--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.2"
+    "npm-run-all": "^4.1.2",
+    "url-parse": "^1.4.3"
   }
 }
